--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     الدخول إلى العلامات
   </a>
 </div>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </body>
 </html>
+
